# cfdna_filtering_downsample

./: Makefile  README.md  environment.yml  filtering_downsample.smk  pyproject.toml  run_pipeline.sh  setup.sh
cfdna_filtering_downsample/: __init__.py  dataset.py  features.py  plots.py
cfdna_filtering_downsample/modeling/: predict.py  train.py
configs/: config_FinaleDB_260224.yaml
docs/: mkdocs.yml
docs/docs/: index.md
envs/: controller_env.yml  downsample.yml
scripts/: downsample_bam.py  filter_bam.py
