[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cfdna_filtering_downsample"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "MjM" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["cfdna_filtering_downsample"]
include = ["pyproject.toml", "cfdna_filtering_downsample/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["cfdna_filtering_downsample"]
force-sort-within-sections = true

